Refactor HTML structure and enhance canvas rendering in ThreeJS

--- a/threeJS/index.html
+++ b/threeJS/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Triángulo ThreeJS</title>
-    <style> body { margin: 0; }
-            .info {
-            margin-top: 20px;
-            text-align: center;}
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <script type="module" src="./main.js"></script>
+    <h1>Triángulo en ThreeJS</h1>
+    <canvas id="glCanvas" width="600" height="600">
+        <script type="module" src="./main.js"></script>
+    </canvas>
+    <div class="info">
+        <p>Triángulo básico renderizado con ThreeJS</p>
+    </div>
 </body>
 </html>
