Add TWGL implementation with HTML, CSS, and JavaScript files

--- a/webgl2/index.html
+++ b/webgl2/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Triángulo en webgl2</h1>
+    <h1>Triángulo en WebGL2</h1>
     <canvas id="glCanvas" width="600" height="600"></canvas>
     <div class="info">
-        <p>Triángulo básico renderizado con webgl2</p>
+        <p>Triángulo básico renderizado con WebGL2</p>
     </div>
     <script src="../webgl2/triangle.js"></script>
 </body>
