--- a/TWGL/index.html
+++ b/TWGL/index.html
@@ -13,6 +13,6 @@
     <div class="info">
         <p>Triángulo básico renderizado con TWGL</p>
     </div>
-    <script src="../twgl/triangle.js"></script>
+    <script src="../TWGL/triangle.js"></script>
 </body>
 </html>
